[gd_scene load_steps=17 format=3 uid="uid://brcuq1nxojayu"]

[ext_resource type="Texture2D" uid="uid://bqqgg7ndi6so1" path="res://Icons/Menu/emptyButton.png" id="1_ibcwc"]
[ext_resource type="Texture2D" uid="uid://l7hks8le1o64" path="res://Icons/Menu/Title.png" id="1_jum1j"]
[ext_resource type="Script" path="res://Data/DifficultMenuScript.gd" id="1_nv7s8"]
[ext_resource type="Texture2D" uid="uid://tjmeghtnxuuc" path="res://Icons/Menu/emptyButtonDown.png" id="2_3kmbn"]
[ext_resource type="Texture2D" uid="uid://ujqrh5v4qfpi" path="res://Icons/Menu/emptyButtonHower.png" id="3_0tih0"]
[ext_resource type="Texture2D" uid="uid://cax1sac58s4bv" path="res://Icons/Menu/Background.png" id="3_5lyp1"]
[ext_resource type="FontFile" uid="uid://cceis1op8xuls" path="res://Verdana-Bold.ttf" id="4_eg103"]
[ext_resource type="Texture2D" uid="uid://cddwh18nqwpun" path="res://Icons/Menu/backButton.png" id="5_3ms3d"]
[ext_resource type="Texture2D" uid="uid://dhab4q7s4ogea" path="res://Icons/Menu/backButtonDown.png" id="6_cmvb2"]
[ext_resource type="Texture2D" uid="uid://qe0ri6bc8bhc" path="res://Icons/Menu/backButtonHower.png" id="7_cms1k"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wr6p3"]
texture = ExtResource("1_jum1j")

[sub_resource type="LabelSettings" id="LabelSettings_uye52"]
font = ExtResource("4_eg103")
font_size = 50
font_color = Color(1, 0.545098, 0, 1)
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vh0yb"]
texture = ExtResource("3_5lyp1")

[sub_resource type="LabelSettings" id="LabelSettings_1rwlp"]
font_size = 25
font_color = Color(0.898039, 0.984314, 0, 1)
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_hbj5j"]
font = ExtResource("4_eg103")
font_size = 35
font_color = Color(0.898039, 0.984314, 0, 1)
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_6jrwq"]
font = ExtResource("4_eg103")
font_size = 25
font_color = Color(0.898039, 0.984314, 0, 1)
shadow_color = Color(0, 0, 0, 1)

[node name="DifficultMenu" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_nv7s8")

[node name="PanelContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/separation = 0

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer"]
custom_minimum_size = Vector2(0, 110)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_wr6p3")

[node name="Label" type="Label" parent="PanelContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "DIFFICULT"
label_settings = SubResource("LabelSettings_uye52")

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_vh0yb")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/PanelContainer2/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="DifficultLbl" type="Label" parent="PanelContainer/PanelContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
label_settings = SubResource("LabelSettings_1rwlp")

[node name="EasyButton" type="TextureButton" parent="PanelContainer/PanelContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("1_ibcwc")
texture_pressed = ExtResource("2_3kmbn")
texture_hover = ExtResource("3_0tih0")

[node name="Label" type="Label" parent="PanelContainer/PanelContainer2/MarginContainer/VBoxContainer/EasyButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "EASY"
label_settings = SubResource("LabelSettings_hbj5j")

[node name="MediumButton" type="TextureButton" parent="PanelContainer/PanelContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("1_ibcwc")
texture_pressed = ExtResource("2_3kmbn")
texture_hover = ExtResource("3_0tih0")

[node name="Label" type="Label" parent="PanelContainer/PanelContainer2/MarginContainer/VBoxContainer/MediumButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "NORMAL"
label_settings = SubResource("LabelSettings_hbj5j")

[node name="HardButton" type="TextureButton" parent="PanelContainer/PanelContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("1_ibcwc")
texture_pressed = ExtResource("2_3kmbn")
texture_hover = ExtResource("3_0tih0")

[node name="Label" type="Label" parent="PanelContainer/PanelContainer2/MarginContainer/VBoxContainer/HardButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "HARD"
label_settings = SubResource("LabelSettings_hbj5j")

[node name="BackButton" type="TextureButton" parent="PanelContainer/PanelContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("5_3ms3d")
texture_pressed = ExtResource("6_cmvb2")
texture_hover = ExtResource("7_cms1k")

[node name="Label" type="Label" parent="PanelContainer/PanelContainer2/MarginContainer/VBoxContainer/BackButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "BACK"
label_settings = SubResource("LabelSettings_6jrwq")

[connection signal="pressed" from="PanelContainer/PanelContainer2/MarginContainer/VBoxContainer/EasyButton" to="." method="_on_easy_button_pressed"]
[connection signal="pressed" from="PanelContainer/PanelContainer2/MarginContainer/VBoxContainer/MediumButton" to="." method="_on_medium_button_pressed"]
[connection signal="pressed" from="PanelContainer/PanelContainer2/MarginContainer/VBoxContainer/HardButton" to="." method="_on_hard_button_pressed"]
[connection signal="pressed" from="PanelContainer/PanelContainer2/MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
